--- a/.github/workflows/build_site.yml
+++ b/.github/workflows/build_site.yml
@@ -31,6 +31,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: build 'example-site'
+        run: python3 build.py
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
