--- a/.github/workflows/build_site.yml
+++ b/.github/workflows/build_site.yml
@@ -31,15 +31,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: build 'example-site'
-        run: python3 build.py
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          # Upload entire repository
-          path: 'example-site'
+          path: 'example_site'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
