--- a/.github/workflows/build_site.yml
+++ b/.github/workflows/build_site.yml
@@ -34,6 +34,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: 3.x
+      - run: python3 build_docs.py
       - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV 
       - uses: actions/cache@v3
         with:
@@ -43,4 +44,3 @@ jobs:
             mkdocs-material-
       - run: pip install mkdocs-material 
       - run: mkdocs gh-deploy --force
-        working-directory: ./example_site
