--- a/.github/workflows/build_site.yml
+++ b/.github/workflows/build_site.yml
@@ -34,6 +34,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: 3.x
+      - run: pip install -r requirements.txt
       - run: python3 build_docs.py
       - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV 
       - uses: actions/cache@v3
@@ -42,5 +43,4 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
-      - run: pip install mkdocs-material 
       - run: mkdocs gh-deploy --force
